[project]
name = "dnd5e-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.7.2",
    "attrs>=24.2.0",
    "numpy>=2.1.1",
    "pyside6-fluent-widgets>=1.6.3",
    "requests>=2.32.3",
    "loguru>=0.7.2",
    "dnd5e-srd-api",
    "rich>=13.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "sourcery>=1.22.0",
    "pyinstaller>=6.10.0",
    "pyinstaller-hooks-contrib>=2024.8",
    "ipython>=8.27.0",
    "rich>=13.8.0",
]

[tool.uv.sources]
dnd5e-srd-api = { git = "https://github.com/fred-kr/dnd5e-srd-api.git", branch = "attrs-version" }

[tool.ruff]
target-version = "py312"
show-fixes = true
output-format = "concise"
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "B"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
