[project]
name = "dnd5e-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.8.0",
    "attrs>=24.2.0",
    "numpy>=2.1.2",
    "pyside6-fluent-widgets>=1.6.6",
    "requests>=2.32.3",
    "dnd5e-srd-api",
    "pyside-config",
    "pyside-widgets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "sourcery>=1.23.0",
    "pyinstaller>=6.10.0",
    "pyinstaller-hooks-contrib>=2024.8",
    "ipython>=8.28.0",
    "rich>=13.9.2",
]

[tool.uv.sources]
dnd5e-srd-api = { git = "https://github.com/fred-kr/dnd5e-srd-api.git", branch = "attrs-version" }
pyside-config = { git = "https://github.com/fred-kr/pyside-config.git" }
pyside-widgets = { git = "https://github.com/fred-kr/pyside-widgets.git" }

[tool.ruff]
target-version = "py312"
show-fixes = true
output-format = "concise"
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "B"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
